--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  progress_hud: "^1.1.0"
+  logging: ^0.11.3+2
+  http: ^0.12.0
   flutter_test:
     sdk: flutter
 
